--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         }
 
         function shuffle(){
+            moves = 0;
             while(finished()){
                 for(i = 0; i < 1000; i++){
                     console.log("test");
